# Cargo.toml
[package]
name = "lightvn-works"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"               # great for recursive dir walking
tower-http = { version = "0.5", features = ["fs", "trace"] }
