# Cargo.toml
[package]
name = "lightvn-works"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
pulldown-cmark = { version = "0.12", features = ["simd"] }   # Fast Markdown → events
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"               # great for recursive dir walking
tower-http = { version = "0.5", features = ["fs", "trace", "set-header", "compression-gzip", "compression-br"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
