# Cargo.toml
[package]
name = "lightvn-works"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
pulldown-cmark = { version = "0.13", features = ["simd"] }   # Fast Markdown → events
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"               # great for recursive dir walking
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "compression-gzip", "compression-br"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webp = "0.3"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
rstest = "0.26"             # parameterized tests + fixtures
# Installs a git pre-commit hook (on first `cargo test`) that runs `cargo fmt --check`.
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt"] }

# All Rust integration tests live under tests/rs/ as modules of one binary.
# Cargo only auto-discovers tests/*.rs, so the subdir root is declared once here.
[[test]]
name = "rs"
path = "tests/rs/main.rs"
